mdmCeneveo/src/objects/Finance_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number_100__c</fullName>
        <label>Account Number 100</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_101__c</fullName>
        <label>Account Number 101</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_10__c</fullName>
        <label>Account Number 10</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Cenveo_Finance_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrual_Amount__c</fullName>
        <label>Accrual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alterations__c</fullName>
        <label>Alterations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Acc__c</fullName>
        <label>Billing Accout Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Age__c</fullName>
        <formula>Today()- Last_Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_Since_Shipped__c</fullName>
        <label>Days Since Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Ship_Sales__c</fullName>
        <label>Est Ship Sales $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Ship_Date__c</fullName>
        <label>Last Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Less_Invoiced__c</fullName>
        <label>Less Invoiced $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loaded_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loaded Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cenveo_Finance_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_10__c</fullName>
        <label>Plant 10</label>
        <picklist>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Lightning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - New Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Clixx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Conklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Easton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Garland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Hurlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Lancaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Minneapolis East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Port City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Sidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-CLACKAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-TULLAHOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope plants - Finance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenosha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;P - Cadmus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant_11__c</fullName>
        <label>Plant 11</label>
        <picklist>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Lightning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - New Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Clixx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Conklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Easton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Garland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Hurlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Lancaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Minneapolis East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Port City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Sidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-CLACKAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-TULLAHOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope plants - Finance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenosha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;P - Cadmus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant_12__c</fullName>
        <label>Plant 12</label>
        <picklist>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Lightning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - New Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Clixx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Conklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Easton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Garland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Hurlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Lancaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Minneapolis East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Port City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Sidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-CLACKAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-TULLAHOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope plants - Finance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenosha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;P - Cadmus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <picklist>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Lightning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - New Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Clixx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Conklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Easton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Garland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Hurlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Lancaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Minneapolis East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Port City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Sidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP - Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-CLACKAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUST ENV-TULLAHOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope plants - Finance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenosha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;P - Cadmus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quoted_Amt__c</fullName>
        <label>Quoted Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Accrual__c</fullName>
        <label>Sales Accrual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cenveo_Finance_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <label>% Shipped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This shows the status of the jobs shipped but not billed</description>
        <inlineHelpText>This shows the status of the jobs shipped but not billed.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <formula>Sales_Person__r.Manager.FirstName &amp;&quot; &quot;&amp; Sales_Person__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Manager</label>
        <type>Text</type>
    </fields>
    <label>Cenveo Finance Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FA {YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Finance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cenveo Finance Information</pluralLabel>
    <recordTypes>
        <fullName>JSNB</fullName>
        <active>true</active>
        <description>Jobs Shipped Not Billed</description>
        <label>JSNB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>